...
    <string name="available_to_mentor_and_mentee">Available to mentor and be a mentee</string>
    <string name="bio">Bio</string>
    <string name="both">Both</string>
    <string name="both_users_only_available_to_mentor">This request is not possible because both users are only ‘available to
        mentor\'</string>
    <string name="bug">Bug</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_relation_denied">No</string>
    <string name="cancel_relation_text">Are you sure you want to cancel the relation?</string>
    <string name="cancel_relation_title">Cancel Relation</string>
    <string name="cancelled">Cancelled</string>
    <string name="change_password">Change Password</string>
    <string name="char_error">Please don\'t exceed the character limit</string>
...
    <string name="request_detail">Request Detail</string>
    <string name="request_direction_formatted">%1$s %2$s</string>
    <string name="request_sent_by_current_user_message">You want to be %1$s\'s %2$s until %3$s</string>
    <string name="request_sent_by_other_user_message">%1$s wants to be your %2$s until %3$s</string>
    <string name="retry">Retry</string>
    <string name="same_request_already_sent">You have already sent a similar request to\u0020</string>
    <string name="save">Save</string>
    <string name="send_request">Send Request</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="signing_up">Signing up…</string>
    <string name="skills">Skills</string>
    <string name="slack_username">Slack username</string>
...
