<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/navigation_title_profile" />

    <item
        android:id="@+id/navigation_relation"
        android:icon="@drawable/ic_current_relation_black_24dp"
        android:title="@string/navigation_title_relation" />

    <item
        android:id="@+id/navigation_members"
        android:icon="@drawable/ic_members_black_24dp"
        android:title="@string/navigation_title_members" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/ic_requests_black_24dp"
        android:title="@string/navigation_title_requests" />
</menu>